--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/iset_gestion?useSSL=false&createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/iset_gestion?useSSL=false&sessionVariables=sql_mode='NO_ENGINE_SUBSTITUTION'&&createDatabaseIfNotExist=true&jdbcCompliantTruncation=true&createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
@@ -10,6 +10,8 @@ spring.jpa.properties.hibernate.format_sql = true
 #Below two for Auto Creating Table using Entity - Java
 #spring.jpa.hibernate.ddl-auto=create
 spring.jpa.hibernate.ddl-auto = update
+
+
 logging.level.org.hibernate.SQL=DEBUG
 server.port=8088
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
